--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
+	<script>
+		function setOpenid(url,name){
+			var index = url.search('<username>');
+			if(index != -1){
+				// OpenID requires username
+				var user = prompt('Enter your ' + name + ' username:');
+				url = url.substr(0,index) + user;
+			}
+			form = document.forms['login'];
+			form.elements['openid'].value = url;
+		}
+	</script>
 	<h1> Sign in </h1>
 	<form action="" method="post" name="login">
 		{{ form.hidden_tag() }}
@@ -9,6 +21,9 @@
 			{{ form.openid(size=80) }}<br>
 			{% for error in form.openid.errors %}
 				<span style="color: red;">[{{ error }}]</span><br>
+			{% endfor %}
+			|{% for provider in providers %}
+				<a href="javascript:setOpenid('{{provider.url}}','{{provider.name}}');">{{ provider.name }}</a> |
 			{% endfor %}
 		</p>
 		<p>{{ form.remember_me }} Remember Me </p>
